[tool.poetry]
name = "exporter"
version = "0.1.0"
description = ""
authors = ["Henk Vires <noreply@plebian.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stem = ">=1.8.0.dev0"
influxdb = ">=5.3"


[tool.poetry.scripts]
application = "exporter.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
